[gd_scene load_steps=10 format=2]

[ext_resource path="res://mods/base/modes/World0.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/GUI/paper_by_darkwood67_0/paper_by_darkwood67/brown_age_by_darkwood67.jpg" type="Texture" id=2]
[ext_resource path="res://resources/GUI/320x180_book_scaled.png" type="Texture" id=3]
[ext_resource path="res://resources/grassland_tiles.png" type="Texture" id=4]
[ext_resource path="res://gui/GUI.gd" type="Script" id=7]
[ext_resource path="res://Game.gd" type="Script" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
adjustment_enabled = true
adjustment_brightness = 1.15
adjustment_contrast = 1.13
adjustment_saturation = 1.06

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 517.1, 731.1, 233.7, 208.05 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 517.1, 731.1, 233.7, 208.05 )

[node name="Game" type="Node"]
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="World0" parent="." instance=ExtResource( 1 )]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="GUILayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom" type="HBoxContainer" parent="GUILayer/GUI"]
anchor_top = 0.783
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.199982
mouse_filter = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMiddle" type="Control" parent="GUILayer/GUI/PanelBottom"]
margin_right = 880.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBuilding" type="Control" parent="GUILayer/GUI/PanelBottom/PanelMiddle"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BuildingsDisplay" type="Control" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding"]
anchor_left = 0.0655271
anchor_top = 0.115385
anchor_right = 0.934473
anchor_bottom = 0.746154
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MilitaryBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/MilitaryBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="ProductionBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ProductionBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="ResourceBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/ResourceBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="CivilBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/CivilBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="FortificationBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FortificationBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="FoodBuildings" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingCamp" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
margin_right = 104.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignPost" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building3" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 217.0
margin_right = 321.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 325.0
margin_right = 430.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building5" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 434.0
margin_right = 538.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building6" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 542.0
margin_right = 647.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="Building7" type="TextureButton" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingsDisplay/FoodBuildings"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
margin_left = 651.0
margin_right = 756.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = SubResource( 3 )
expand = true

[node name="BuildingTypesContainer" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding"]
anchor_left = 0.064
anchor_top = 0.831
anchor_right = 0.467
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Fortification" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_right = 52.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resource" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_left = 60.0
margin_right = 112.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Food" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_left = 120.0
margin_right = 172.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Civil" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_left = 180.0
margin_right = 233.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Military" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_left = 241.0
margin_right = 293.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Production" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/BuildingTypesContainer"]
margin_left = 301.0
margin_right = 354.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding"]
anchor_left = 0.849
anchor_top = 0.831
anchor_right = 0.939
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TradeMenu" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/HBoxContainer"]
margin_right = 37.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatisticsMenu" type="Button" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelBuilding/HBoxContainer"]
margin_left = 41.0
margin_right = 79.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelOverview" type="Control" parent="GUILayer/GUI/PanelBottom/PanelMiddle"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="GUILayer/GUI/PanelBottom/PanelMiddle/PanelOverview"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="GUILayer/GUI/PanelBottom"]
margin_left = 884.0
margin_right = 919.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="GUILayer/GUI/PanelBottom/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainMenuButton" type="Button" parent="GUILayer/GUI/PanelBottom/Panel/VBoxContainer"]
margin_right = 35.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoButton" type="Button" parent="GUILayer/GUI/PanelBottom/Panel/VBoxContainer"]
margin_top = 53.0
margin_right = 35.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteCursorButton" type="Button" parent="GUILayer/GUI/PanelBottom/Panel/VBoxContainer"]
margin_top = 106.0
margin_right = 35.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Minimap" type="Panel" parent="GUILayer/GUI/PanelBottom"]
self_modulate = Color( 1, 1, 1, 0.411765 )
margin_left = 923.0
margin_right = 1099.0
margin_bottom = 156.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverviewBookButton" type="TextureButton" parent="GUILayer/GUI/PanelBottom"]
margin_left = 1103.0
margin_right = 1280.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
